# FlumphBot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/azure/: README.md  main.tf  outputs.tf  variables.tf
deploy/docker/: Dockerfile  README.md  docker-compose.yml
src/flumphbot/: __init__.py  __main__.py  config.py
src/flumphbot/bot/: __init__.py  client.py  commands.py  polls.py  views.py
src/flumphbot/calendar/: __init__.py  event_analyzer.py  google_client.py  models.py
src/flumphbot/scheduler/: __init__.py  runner.py  tasks.py
src/flumphbot/storage/: __init__.py  azure_tables.py  base.py  sqlite.py
tests/: __init__.py  test_calendar_client.py  test_event_analyzer.py  test_polls.py
